adding styles.css

--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project HTML 1</title>
+        <link rel="stylesheet" href="styles.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header> 
+
         <nav>
+                    <nav class="navbar">
+
         <ul>
+            <ul class="nav-list">
+
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#work">Work</a></li>
@@ -18,6 +26,11 @@
     </nav>
 </header>
 <main>
+    <section id="about" class="section">
+<section id="work" class="section">
+<section id="resume" class="section">
+<section id="contact" class="section">
+
 
 <section id="about">
     <h2>About Me</h2>
@@ -75,6 +88,8 @@
 </main>
 
 <footer>
+    <footer class="footer">
+
     <p>© 2026 Mariem Mallas</p>
 </footer>
 
